--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -333,7 +333,7 @@ DashboardScreen As screen:
                                 
                                 //"InProgress Leads#" & Char(10)&  
                                 //If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted" && Year('Created On')=Year(Now())))) 
-                                CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))
+                                If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted"))>0,CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Submitted")),0)
                             Width: =Parent.Width
                             X: =
                             Y: |-
@@ -468,7 +468,7 @@ DashboardScreen As screen:
                                 =//its for count of yealy/cumulatively InProgress leads
                                 
                                 //"InProgress Leads#" & Char(10)&  
-                                If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" && Year('Created On')=Year(Now())))) 
+                                If( CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress" ))>0,CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="InProgress")),0)
                             Width: =Parent.Width
                             X: =
                             Y: |-
@@ -589,7 +589,7 @@ DashboardScreen As screen:
                                 =//its for count of yealy/cumulatively InProgress leads
                                 
                                 //"InProgress Leads#" & Char(10)&  
-                                If(cumulatively=true, CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected")), CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected" && Year('Created On')=Year(Now())))) 
+                                If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected")) >0,CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected")) ,0)
                             Width: =Parent.Width
                             X: =
                             Y: |-
