--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -637,7 +637,8 @@ DashboardScreen As screen:
 
                         btnRejectedLeadsDS As button:
                             Color: =RGBA(0, 0, 0, 0)
-                            DisabledBorderColor: =RGBA(116, 116, 116, 1)
+                            DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                            DisabledColor: =RGBA(0, 0, 0, 0)
                             DisabledFill: =RGBA(0, 0, 0, 0)
                             DisplayMode: |
                                 =If(CountRows(Filter(LeadInformations,Email=User().Email && LeadStatus="Rejected"))=0,DisplayMode.Disabled,DisplayMode.Edit)
@@ -955,7 +956,8 @@ DashboardScreen As screen:
 
                         btnSoldLeadsDS As button:
                             Color: =RGBA(0, 0, 0, 0)
-                            DisabledBorderColor: =RGBA(116, 116, 116, 1)
+                            DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                            DisabledColor: =RGBA(0, 0, 0, 0)
                             DisabledFill: =RGBA(0, 0, 0, 0)
                             DisplayMode: =If(CountRows(Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No'&& Value(TotalSoldLead)<>0))=0,DisplayMode.Disabled,DisplayMode.Edit)
                             Fill: =RGBA(0, 0, 0, 0)
