--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -2,13 +2,7 @@ RejectedLeads As screen:
     OnVisible: |-
         =UpdateContext({locInfoExpanded:false});
         Set(VarDownIcon,true);
-        ClearCollect(YearData, Sequence(100,
-                LookUp(
-                    LeadInformations,
-                    MechanicName = User().FullName,
-                    Year('Created On')
-                ) 
-            ))
+        If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error))
 
     ctnMainSLS_1 As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(219, 219, 219, 1)
