--- a/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ChatScreen.fx.yaml
@@ -307,7 +307,8 @@ ChatScreen As screen:
                     OnSelect: |-
                         =Set(VarUserName,ThisItem.FromName);
                         //(VartoolTip,ThisItem.FromName)
-                        UpdateContext({VartoolTip:true})
+                        UpdateContext({VartoolTip:true});
+                        Set(VarUsernameTimer,true);
                     PaddingBottom: =0
                     PaddingLeft: =0
                     PaddingRight: =0
@@ -352,7 +353,8 @@ ChatScreen As screen:
                     OnSelect: |-
                         =Set(VarUserName,ThisItem.FromName);
                         //(VartoolTip,ThisItem.FromName)
-                        UpdateContext({VartoolTip:false})
+                        UpdateContext({VartoolTip:false});
+                        Set(VarUsernameTimer,false);
                     PaddingBottom: =0
                     PaddingLeft: =0
                     PaddingRight: =0
@@ -631,4 +633,14 @@ ChatScreen As screen:
                 Text: ="Ok"
                 Width: =Parent.Width/5
                 ZIndex: =3
+
+    TimerforDispayusername As timer:
+        Duration: =2000
+        OnTimerEnd: |-
+            =Set(VarUsernameTimer,false);UpdateContext({VartoolTip:false});
+        Start: =VarUsernameTimer
+        Visible: =false
+        X: =60
+        Y: =60
+        ZIndex: =6
 
