--- a/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SubmittedLeadScreen.fx.yaml
@@ -3,7 +3,9 @@ SubmittedLeadScreen As screen:
         =UpdateContext({locInfoExpanded:false});
         Set(VarDownIcon,true);
         
-            If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error))
+            If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error)
+            //,Notify("Internet is connected",NotificationType.Success)
+            )
 
     ctnMainSLS As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(219, 219, 219, 1)
