--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -2455,7 +2455,7 @@ LeadSummaryScreen As screen:
                                 ID = Text(VarLeadInformationID),
                                 LeadTrackingNumber
                             )
-                        ));,Notify("patch fail"))
+                        );,Notify("patch fail")))
                         /*Notify(
                             "Form has been submitted succuessfully.",
                             NotificationType.Success
