--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -2328,6 +2328,7 @@ LeadSummaryScreen As screen:
                         
                         If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error),
                                 Set(varSubmit,false);
+                        
                         If(
                             IsBlank(IntxtUnitCountLSS.Text) || IsBlank(IntxtUnitDescriptionLSS.Text) || IsBlank(CboxScopeLSS) || IsBlank(IntxtEstimatedHoursLSS.Text) || IsBlank(IntxtNotesLSS.Text) || If(
                                 CboxCCLSS.Value = true,
@@ -2431,7 +2432,15 @@ LeadSummaryScreen As screen:
                                                 Column & ": " & Message
                                             ) ,
                                             NotificationType.Error
-                                        )),
+                                        ));
+                                        Set(
+                                VarNotificationloding,
+                                false
+                            );
+                            Set(
+                                VarNotification,
+                                false
+                            ); Navigate(LeadSummaryScreen),
                            /*
                            If(
                                 CountRows(
