--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -2490,7 +2490,7 @@ LeadSummaryScreen As screen:
                             Set(
                                 VarNotification,
                                 false
-                            ); Navigate(LeadSummaryScreen)));
+                            ); Notify("Lead didn't submit due to no network, try again later. ");Navigate(LeadSummaryScreen)));
                         /*Notify(
                             "Form has been submitted succuessfully.",
                             NotificationType.Success
